--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -4,57 +4,60 @@
 <head>
     <meta charset="utf-8">
     <title>The One and Only's blogg</title>
+    <link rel="stylesheet" type="text/css" href="../css/ändra.css">
 </head>
 
 <body>
-    <header>
-        <h1>kontakt</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="/index.html">hem</a></li>
-            <li><a href="/pages/presentation.html">presentation</a></li>
-            <li><a href="/pages/laborationer.html">laborationer</a></li>
-            <li><a href="/pages/kontakt.html">kontakt</a></li>
-        </ul>
-    </nav>
-    <article>
+    <div id="container">
         <header>
-            <h4>Här finns jag!</h4>
+           <h1>kontakt</h1>
+           <h2>Här finns jag!</h2>
         </header>
-        <section>
-            <header>
-                <h3>Formulär</h3>
-            </header>
-            <form action="http://webproduction.standout.se/form.php" method="post">
-                <fieldset>
-                    <legend>Skicka gärna feedback</legend>
-                    <label for="firstname">förnamn</label>
-                    <input type="text" id="firstname" name="title" placeholder="förnamn">
-                    <label for="lastname">efternamn</label>
-                    <input type="text" id="lastname" name="lastname" placeholder="efternamn">
-                </fieldset>
-                <fieldset>
-                    <legend>Gillar du det du ser?</legend>
-                    <select name="errand">
-                        <option value="ja">Ja</option>
-                        <option value="kan hända">Kan hända</option>
-                        <option value="nja">Nja</option>
-                        <option value="nej">Nej</option>
-                        <option value="spräng skiten">Spräng skiten</option>
-                    </select>
-                </fieldset>
-                <fieldset>
-                    <legend>Mer info</legend>
-                    <textarea type="text" name="question"></textarea>
-                    <input type="checkbox" name="contact[]" value="number">telefonnummer
-                    <input type="checkbox" name="contact[]" value="email">email
-                    <input type=submit value="Skicka förfrågan">
-                </fieldset>
-            </form>
-            <footer>Skrivet av Erik Petersson</footer>
-        </section>
-    </article>
+        <nav>
+            <ul>
+                <li><a href="../index.html">hem</a></li>
+                <li><a href="../pages/presentation.html">presentation</a></li>
+                <li><a href="../pages/laborationer.html">laborationer</a></li>
+                <li><a href="../pages/kontakt.html">kontakt</a></li>
+            </ul>
+        </nav>
+
+        <main>
+            <article>
+                <header>
+                    <h3>Formulär</h3>
+                </header>
+                <form id="formulär" action="http://webproduction.standout.se/form.php" method="post">
+                    <fieldset>
+                        <legend>Skicka gärna feedback</legend>
+                        <label for="firstname">förnamn</label>
+                        <input type="text" id="firstname" name="title" placeholder="förnamn">
+                        <label for="lastname">efternamn</label>
+                        <input type="text" id="lastname" name="lastname" placeholder="efternamn">
+                    </fieldset>
+                    <fieldset>
+                        <legend>Gillar du det du ser?</legend>
+                        <select name="errand">
+                            <option value="ja">Ja</option>
+                            <option value="kan hända">Kan hända</option>
+                            <option value="nja">Nja</option>
+                            <option value="nej">Nej</option>
+                            <option value="spräng skiten">Spräng skiten</option>
+                        </select>
+                    </fieldset>
+                    <fieldset>
+                        <legend>Mer info</legend>
+                        <textarea type="text" name="question"></textarea>
+                        <input type="checkbox" name="contact[]" value="number">telefonnummer
+                        <input type="checkbox" name="contact[]" value="email">email
+                        <input type=submit value="Skicka förfrågan">
+                    </fieldset>
+                </form>
+                <footer>Skrivet av Erik Petersson</footer>
+            </article>
+            </article>
+        </main>
+    </div>
 </body>
 
 </html>
