--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -4,76 +4,77 @@
 <head>
     <meta charset="utf-8">
     <title>The One and Only's blogg</title>
-    <link rel="stylesheet" type="text/css" href="/css/table.css">
+    <link rel="stylesheet" type="text/css" href="../css/ändra.css">
 </head>
 
 <body>
-    <header>
-        <h1>Laborationer</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="/index.html">hem</a></li>
-            <li><a href="/pages/presentation.html">presentation</a></li>
-            <li><a href="/pages/laborationer.html">laborationer</a></li>
-            <li><a href="/pages/kontakt.html">kontakt</a></li>
-        </ul>
-    </nav>
-    <article>
+    <div id="container">
         <header>
-            <h2>Webbproduktion</h2>
+            <h1>Laborationer</h1>
         </header>
-        <section>
-            <header>
-                <h5>Laborations länk</h5>
-            </header>
+
+        <nav>
             <ul>
-                <li><a href="#Laborationsuppgift1">Laboration 1</a></li>
+                <li><a href="../index.html">hem</a></li>
+                <li><a href="../pages/presentation.html">presentation</a></li>
+                <li><a href="../pages/laborationer.html">laborationer</a></li>
+                <li><a href="../pages/kontakt.html">kontakt</a></li>
             </ul>
-        </section>
-        <section>
-            <header>
-                <h2><a id="Laborationsuppgift1">Laboration 1</a></h2>
-            </header>
-            <p>Uppgifter:</p>
-            <ol>
-                <li>Absoluta/Relativa sökvägar
-                    <ol type="a">
-                        <li>1.4.1. Vilken är den absoluta sökvägen till filen bottom.html?</li>
-                        <li>1.4.2. Vilken är den relativa sökvägen från filen default.html till filen top.html?</li>
-                        <li>1.4.3. Vilken är den relativa sökvägen från filen bottom.html till filen index.html?</li>
-                        <li>1.4.4. Vilken är den absoluta sökvägen till filen index.html?</li>
-                        <li>1.4.5. Vilken är den relativa sökvägen från filen top.html till bottom.html?</li>
-                        <li>1.4.6. Vilken är den relativa sökvägen från filen index.html till top.html?
+        </nav>
+
+        <main>
+            <article>
+                <header>
+                    <h2>Webbproduktion</h2>
+                </header>
+
+                <article>
+                    <p>länk till uppgiften</p>
+                    <ul>
+                        <li><a href="#Laborationsuppgift1">Laboration 1</a></li>
+                    </ul>
+                    <header>
+                        <h3><a id="Laborationsuppgift1">Laboration 1</a></h3>
+                    </header>
+                    <p>Uppgifter:</p>
+                    <ol>
+                        <li>Absoluta/Relativa sökvägar
+                            <ol type="a">
+                                <li>1.4.1. Vilken är den absoluta sökvägen till filen bottom.html?</li>
+                                <li>1.4.2. Vilken är den relativa sökvägen från filen default.html till filen top.html?</li>
+                                <li>1.4.3. Vilken är den relativa sökvägen från filen bottom.html till filen index.html?</li>
+                                <li>1.4.4. Vilken är den absoluta sökvägen till filen index.html?</li>
+                                <li>1.4.5. Vilken är den relativa sökvägen från filen top.html till bottom.html?</li>
+                                <li>1.4.6. Vilken är den relativa sökvägen från filen index.html till top.html?
+                            </ol>
                     </ol>
-            </ol>
-            <ol>
-                <li>Svar: Absoluta/Relativa sökvägar
-                    <ol type="a">
-                        <li>1.4.1. http://www.server.se/html/pages/bottom.html</li>
-                        <li>1.4.2. /html/pages/top.html</li>
-                        <li>1.4.3. /index.html</li>
-                        <li>1.4.4. http://www.server.se/index.html</li>
-                        <li>1.4.5. /html/pages/bottom.html</li>
-                        <li>1.4.6. /html/pages/top.html
+                    <ol>
+                        <li>Svar: Absoluta/Relativa sökvägar
+                            <ol type="a">
+                                <li>1.4.1. http://www.server.se/html/pages/bottom.html</li>
+                                <li>1.4.2. /html/pages/top.html</li>
+                                <li>1.4.3. /index.html</li>
+                                <li>1.4.4. http://www.server.se/index.html</li>
+                                <li>1.4.5. /html/pages/bottom.html</li>
+                                <li>1.4.6. /html/pages/top.html
+                            </ol>
                     </ol>
-            </ol>
-            <ul>
-                <li><a href="/pics/aa.png" target="_blank">Min loga</a></li>
-            </ul>
-            <p></p>
-            <ul>
-                <li><a href="/pages/presentation.html#lol">Bild på mig</a></li>
-            </ul>
-            <dl>
-                <dt>
+                    <ul>
+                        <li><a href="../pics/aa.png" target="_blank">Min loga</a></li>
+                    </ul>
+                    <p></p>
+                    <ul>
+                        <li><a href="../pages/presentation.html#lol">Bild på mig</a></li>
+                    </ul>
+                    <dl>
+                        <dt>
                 <dd>Uppgift1.6</dd>
-                <dd><a href="/index.html">Min fantastiska vektorbild</a></dd>
+                <dd><a href="../index.html">Min fantastiska vektorbild</a></dd>
         </dl>
     <ol>
         <li>Uppgift 1.7
             <ol type="a">
-                <li><a href="/index.html#video">Video</a>
+                <li><a href="../index.html#video">Video</a>
             </ol>
     </ol>
     <table>
@@ -148,7 +149,9 @@
 			<footer>
 			    Skrivet av Erik Petersson
 			</footer>
-</section>
-</article>
+        </article>
+    </article>
+    </main>
+    </div>
 </body>
 </html>
