--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -4,138 +4,180 @@
 <head>
     <meta charset="utf-8">
     <title>The One and Only's blogg</title>
-    <link rel="stylesheet" type="text/css" href="/css/article.css">
+    <link rel="stylesheet" type="text/css" href="../css/ändra.css">
 </head>
 
 <body>
-    <header>
-        <h1>Presentation</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="/index.html">hem</a></li>
-            <li><a href="/pages/presentation.html">presentation</a></li>
-            <li><a href="/pages/laborationer.html">laborationer</a></li>
-            <li><a href="/pages/kontakt.html">kontakt</a></li>
-        </ul>
-    </nav>
-    <article>
+    <div id="container">
         <header>
-            <h2>Presentation</h2>
+            <h1>Presentation</h1>
+            <h2>Vem jag är & vad jag gör</h2>
         </header>
-        <section>
-            <h4>Fakta om mig som person</h4>
-        </section>
-        <section>
-            <header>
-                <h2>Mina intressen</h2>
-            </header>
+
+        <nav>
             <ul>
-                <li>Styrketräna
-                    <ul>
-                        <li>Tycker mer om färre reps med tyngre vikter än fler reps med lättare.</li>
-                    </ul>
+                <li><a href="../index.html">hem</a></li>
+                <li><a href="../pages/presentation.html">presentation</a></li>
+                <li><a href="../pages/laborationer.html">laborationer</a></li>
+                <li><a href="../pages/kontakt.html">kontakt</a></li>
             </ul>
-            <ul>
-                <li>Gaming
+        </nav>
+
+        <main>
+            <article>
+                <header>
+
+                    <h4>Fakta om mig som person</h4>
+                </header>
+                <article>
+                    <header>
+                        <h3>Mina intressen</h3>
+                    </header>
                     <ul>
-                        <li>Diablo3</li>
-                        <li>World of Warcraft</li>
-                        <li>RuneScape</li>
-                        <li>Counter Strike Global Offensive</li>
+                        <li>
+                            <p>Styrketräna</p>
+                            <ul>
+                                <li>
+                                    <p>Tycker mer om färre reps med tyngre vikter än fler reps med lättare.</p>
+                                </li>
+
+                            </ul>
                     </ul>
-            </ul>
-            <a href="http://eu.battle.net/en/" target="_blank">Diablo3, WoW</a>
-            <p></p>
-            <a href="http://www.runescape.com" target="_blank">Runescape</a>
-            <p></p>
-            <a href="http://store.steampowered.com/" target="_blank">CS GO</a>
-            <p></p>
-            <p><strong>Diablo3</strong></p>
-            <p>I nuläget är jag fortfarande relativt ny till Diablo3 men jag lär mig snabbt hur mekaniken fungerar samtidigt som jag klättrar i färdighet rankmässigt. Jag lirar främst med kompisar men också själv om situationen kräver det. I fredags 28/8
-                släpptes season4 och då börjar man om att levla och skaffa gear från grunden. Ett antal timmar in i season4 så blev jag rankad 50 bästa i EU på barbarian solo greater rift. Duo lyckades jag och en polare ranka 127.</p>
-            <p><strong>World of Warcraft</strong></p>
-            <p>Tidigare lirade jag PvE både i MoP och nu i WoD. Jag tröttnade p.g.a av att jag vill vara mer fri och lira vad jag vill när jag vill tillsammans med polare. rankmässigt så gick det väldigt bra för mig, legat vid 97-99% bracket. Vilket betyder
-                att jag är bättre än 97-99% av de spelare som kör samma class och spec som mig på just den bossen/encounter. Även också rankat under 100 dps på olika encounters. Överlag hann jag aldrig nå proffsnivå eller lira med proffs eftersom jag
-                fortfarande var rätt ny.</p>
-            <p><strong>RuneScape</strong></p>
-            <p>Lirade aldrig efter någon speciell rank eftersom jag var 14-15 år när jag lirade som mest. Men det är helt klart det spelet jag haft mest kul i.</p>
-            <p><strong>Counter Strike Global Offensive</strong></p>
-            <p>Började som silver, 0.1kd per game tills nu jag nyligen rankat Legendary Eagle på ett av mina steam konton. Har flertal konton med lägsta ranken Master guardian elite, osäkert när jag ska pusha Legendary Eagle Master och högre.</p>
-        </section>
-        <section>
-            <header>
-                <h2>Min familj</h2>
-            </header>
-            <p>Jag bor hemma tillsammans med min pappa som heter Jan och min mor som heter Elisabeth. Jag har en syster som har eget boende.</p>
-        </section>
-        <section>
-            <header>
-                <h2>Vad jag är bra och mindre bra på</h2>
-            </header>
-            <ol>
-                <li>Vad jag är bra på</li>
-                <li>Jag är bra på att fort bli bra på datorspel och att fort förstår hur man ska bli bättre än andra.</li>
-                <li>jag är en väldigt kreativ person som ofta kommer på idéer hur man kan gå till väga för att nå sitt mål.</li>
-                <li>Helt klart är jag allmänt bäst</li>
-            </ol>
-            <p><strong>Vad jag är mindre bra på</strong></p>
-            <ol>
-                <li>Mindre bra på? Jag? Eller jo, läxor. Vilken tur jag inte läser tråkiga ämnen längre!</li>
-            </ol>
-        </section>
-        <section>
-            <header>
-                <h2>Tidigare utbildningar/skolor</h2>
-            </header>
-            <p>Dagis, Stora björn</p>
-            <p>Grundskola, Rinkabyholmsskolan</p>
-            <p>Högstadie, Falkenbergsskolan</p>
-            <p>Gymnasie årskurs 1, el-energiprogrammet Lars Kaggskolan</p>
-            <p>Gymnasie årskurs 2-3, inriktning Data-kommunikationsteknik Lars Kaggskolan</p>
-            <p>Gymnasiet, Liftutbildning för saxlift & bomlift</p>
-            <a href="http://www.gyf.se/larskaggskolan/" target="_blank">Lars Kaggskolan</a>
-        </section>
-        <section>
-            <header>
-                <h2>Tidigare arbetslivserfarenhet</h2>
-            </header>
-            <p>Sommarjobb 2 sommrar irad, arbetsplats: Norra kyrkogården Kalmar</p>
-            <p>Praktik 16 veckor, praktikplats: Elbolaget Kalmar</p>
-        </section>
-        <section>
-            <header>
-                <h2>Har jag programmerat tidigare?</h2>
-            </header>
-            <p>Svar ja, tidigare har jag programmerat ljusdioder i programmet Arduino.</p>
-            <p>Mycket utav kodningen i Arduino såsom med html5 finner man spår, vilka kommandon, hur man struktuerar kodningen t.ex.</p>
-            <a href="https://www.arduino.cc/" target="_blank">Arduino</a>
-        </section>
-        <section>
-            <header>
-                <h2>Vad fick mig att söka utbildningen Systemutvecklare.NET?</h2>
-            </header>
-            <p>Jag har länge inte förstått mig på kodning och jag såg min chans genom att söka utbildningen.</p>
-            <p>Jag tycker samtidigt att det är intressant att lära sig hur det går det.</p>
-        </section>
-        <section>
-            <header>
-                <h2>Tankar inför framtiden?</h2>
-            </header>
-            <p>Att uppnå de mål jag satt framför mig och de mål jag kommer sätta.</p>
-        </section>
-        <section>
-            <header>
-                <h4>Profilfoto</h4>
-            </header>
-            <!-- Bilder på mig, men den här kommentaren ser du inte. Inte om du inte letar efter mig! -->
-            <p id="lol"></p>
-            <img src="/pics/IMG_0046.JPG" alt="Bild på mig" style="width:250px;height:450px;">
-            <footer>
-                Skrivet av Erik Petersson
-            </footer>
-        </section>
-    </article>
+                    <ul>
+                        <li>
+                            <p>Gaming</p>
+                            <ul>
+                                <li>
+                                    <p>Diablo3</p>
+                                </li>
+                                <li>
+                                    <p>World of Warcraft</p>
+                                </li>
+                                <li>
+                                    <p>RuneScape</p>
+                                </li>
+                                <li>
+                                    <p>Counter Strike Global Offensive</p>
+                                </li>
+                            </ul>
+                    </ul>
+                    <a href="http://eu.battle.net/en/" target="_blank">Diablo3, WoW</a>
+                    <p></p>
+                    <a href="http://www.runescape.com" target="_blank">Runescape</a>
+                    <p></p>
+                    <a href="http://store.steampowered.com/" target="_blank">CS GO</a>
+                    <p></p>
+                    <p><strong>Diablo3</strong></p>
+                    <p>I nuläget är jag fortfarande relativt ny till Diablo3 men jag lär mig snabbt hur mekaniken fungerar samtidigt som jag klättrar i färdighet rankmässigt. Jag lirar främst med kompisar men också själv om situationen kräver det. I fredags
+                        28/8 släpptes season4 och då börjar man om att levla och skaffa gear från grunden. Ett antal timmar in i season4 så blev jag rankad 50 bästa i EU på barbarian solo greater rift. Duo lyckades jag och en polare ranka 127.</p>
+                    <p><strong>World of Warcraft</strong></p>
+                    <p>Tidigare lirade jag PvE både i MoP och nu i WoD. Jag tröttnade p.g.a att jag vill vara mer fri och lira vad jag vill när jag vill tillsammans med polare. rankmässigt så gick det väldigt bra för mig, legat vid 97-99% bracket. Vilket
+                        betyder att jag är bättre än 97-99% av de spelare som kör samma class och spec som mig på just den bossen/encounter. Även också rankat under 100 dps på olika encounters. Överlag hann jag aldrig nå proffsnivå eller lira med proffs
+                        eftersom jag fortfarande var rätt ny.</p>
+                    <p><strong>RuneScape</strong></p>
+                    <p>Lirade aldrig efter någon speciell rank eftersom jag var 14-15 år när jag lirade som mest. Men det är helt klart det spelet jag haft mest kul i.</p>
+                    <p><strong>Counter Strike Global Offensive</strong></p>
+                    <p>Började som silver, 0.1kd per game tills nu jag nyligen rankat Legendary Eagle på ett av mina steam konton. Har flertal konton med lägsta ranken Master guardian elite, osäkert när jag ska pusha Legendary Eagle Master och högre.</p>
+                </article>
+
+                <article>
+                    <header>
+                        <h3>Min familj</h3>
+                    </header>
+                    <p>Jag bor hemma tillsammans med min pappa som heter Jan och min mor som heter Elisabeth. Jag har en syster som har eget boende.</p>
+                </article>
+
+                <article>
+                    <header>
+                        <h3>Vad jag är bra och mindre bra på</h3>
+                    </header>
+                    <ol>
+                        <li>
+                            <p>Vad jag är bra på</p>
+                        </li>
+                        <li>
+                            <p>Jag är bra på att fort bli bra på datorspel och att fort förstår hur man ska bli bättre än andra.</p>
+                        </li>
+                        <li>
+                            <p>jag är en väldigt kreativ person som ofta kommer på idéer hur man kan gå till väga för att nå sitt mål.</p>
+                        </li>
+                        <li>
+                            <p>Helt klart är jag allmänt bäst</p>
+                        </li>
+                    </ol>
+                    <p><strong>Vad jag är mindre bra på</strong></p>
+                    <ol>
+                        <li>
+                            <p>Mindre bra på? Jag? Eller jo, läxor. Vilken tur jag inte läser tråkiga ämnen längre!</p>
+                        </li>
+                    </ol>
+                </article>
+
+                <article>
+                    <header>
+                        <h3>Tidigare utbildningar/skolor</h3>
+                    </header>
+                    <p>Dagis, Stora björn</p>
+                    <p>Grundskola, Rinkabyholmsskolan</p>
+                    <p>Högstadie, Falkenbergsskolan</p>
+                    <p>Gymnasie årskurs 1, el-energiprogrammet Lars Kaggskolan</p>
+                    <p>Gymnasie årskurs 2-3, inriktning Data-kommunikationsteknik Lars Kaggskolan</p>
+                    <p>Gymnasiet, Liftutbildning för saxlift & bomlift</p>
+                    <a href="http://www.gyf.se/larskaggskolan/" target="_blank">Lars Kaggskolan</a>
+                </article>
+
+                <article>
+                    <header>
+                        <h3>Tidigare arbetslivserfarenhet</h3>
+                    </header>
+                    <p>Sommarjobb 2 sommrar irad, arbetsplats: Norra kyrkogården Kalmar</p>
+                    <p>Praktik 16 veckor, praktikplats: Elbolaget Kalmar</p>
+                </article>
+
+                <article>
+                    <header>
+                        <h3>Har jag programmerat tidigare?</h3>
+                    </header>
+                    <p>Svar ja, tidigare har jag programmerat ljusdioder i programmet Arduino.</p>
+                    <p>Mycket utav kodningen i Arduino såsom med html5 finner man spår, vilka kommandon, hur man struktuerar kodningen t.ex.</p>
+                    <a href="https://www.arduino.cc/" target="_blank">Arduino</a>
+                </article>
+
+                <article>
+                    <header>
+                        <h3>Systemutvecklare.NET?</h3>
+                    </header>
+                    <p>Jag har länge inte förstått mig på kodning och jag såg min chans genom att söka utbildningen.</p>
+                    <p>Jag tycker samtidigt att det är intressant att lära sig hur det går det.</p>
+                </article>
+
+                <article>
+                    <header>
+                        <h3>Tankar inför framtiden?</h3>
+                    </header>
+                    <p>Att uppnå de mål jag satt framför mig och de mål jag kommer sätta.</p>
+                </article>
+
+                <article class="profilfoto">
+                    <header>
+                        <h4>Profilfoto</h4>
+                    </header>
+                    <!-- Bilder på mig, men den här kommentaren ser du inte. Inte om du inte letar efter mig! -->
+                    <p id="lol"></p>
+                    <img src="/pics/IMG_0046.JPG" alt="Bild på mig">
+                    <footer>
+                        <p>
+                            2015-09-07 10:32, av Erik Petersson
+                        </p>
+                    </footer>
+                </article>
+            </article>
+        </main>
+        <footer>
+            <p>Den här sidan ägs av Erik Petersson</p>
+        </footer>
+    </div>
+
 </body>
 
 </html>
