--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>The One and Only's blogg</title>
-    <link rel="stylesheet" type="text/css" href="../css/ändra.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
 
                 <h4>Min blogg handlar om mig</h4>
                 <p>I den här bloggen hittar du fakta om vad jag kommer syssla med under min utbildnings gång!</p>
-                <p>Min blogg för projekt och allmän information</p>
+
                 <p id="vektor"></p>
                 <img src="pics/harry.svg" alt="Harry">
                 <div id="video">
