--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8">
     <title>The One and Only's blogg</title>
-    <link rel="stylesheet" type="text/css" href="../css/ändra.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 
 <body>
     <div id="container">
         <header>
-           <h1>kontakt</h1>
-           <h2>Här finns jag!</h2>
+            <h1>kontakt</h1>
+            <h2>Här finns jag!</h2>
         </header>
         <nav>
             <ul>
