--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>The One and Only's blogg</title>
-    <link rel="stylesheet" type="text/css" href="../css/ändra.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 
 <body>
@@ -39,7 +39,7 @@
                     <p>Uppgifter:</p>
                     <ol>
                         <li>Absoluta/Relativa sökvägar
-                            <ol type="a">
+                            <ol type="a" id="uppgifter">
                                 <li>1.4.1. Vilken är den absoluta sökvägen till filen bottom.html?</li>
                                 <li>1.4.2. Vilken är den relativa sökvägen från filen default.html till filen top.html?</li>
                                 <li>1.4.3. Vilken är den relativa sökvägen från filen bottom.html till filen index.html?</li>
