--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>The One and Only's blogg</title>
-    <link rel="stylesheet" type="text/css" href="../css/ändra.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 
 <body>
@@ -61,12 +61,7 @@
                                 </li>
                             </ul>
                     </ul>
-                    <a href="http://eu.battle.net/en/" target="_blank">Diablo3, WoW</a>
-                    <p></p>
-                    <a href="http://www.runescape.com" target="_blank">Runescape</a>
-                    <p></p>
-                    <a href="http://store.steampowered.com/" target="_blank">CS GO</a>
-                    <p></p>
+
                     <p><strong>Diablo3</strong></p>
                     <p>I nuläget är jag fortfarande relativt ny till Diablo3 men jag lär mig snabbt hur mekaniken fungerar samtidigt som jag klättrar i färdighet rankmässigt. Jag lirar främst med kompisar men också själv om situationen kräver det. I fredags
                         28/8 släpptes season4 och då börjar man om att levla och skaffa gear från grunden. Ett antal timmar in i season4 så blev jag rankad 50 bästa i EU på barbarian solo greater rift. Duo lyckades jag och en polare ranka 127.</p>
@@ -123,7 +118,7 @@
                     <p>Gymnasie årskurs 1, el-energiprogrammet Lars Kaggskolan</p>
                     <p>Gymnasie årskurs 2-3, inriktning Data-kommunikationsteknik Lars Kaggskolan</p>
                     <p>Gymnasiet, Liftutbildning för saxlift & bomlift</p>
-                    <a href="http://www.gyf.se/larskaggskolan/" target="_blank">Lars Kaggskolan</a>
+
                 </article>
 
                 <article>
@@ -140,7 +135,7 @@
                     </header>
                     <p>Svar ja, tidigare har jag programmerat ljusdioder i programmet Arduino.</p>
                     <p>Mycket utav kodningen i Arduino såsom med html5 finner man spår, vilka kommandon, hur man struktuerar kodningen t.ex.</p>
-                    <a href="https://www.arduino.cc/" target="_blank">Arduino</a>
+
                 </article>
 
                 <article>
@@ -157,13 +152,25 @@
                     </header>
                     <p>Att uppnå de mål jag satt framför mig och de mål jag kommer sätta.</p>
                 </article>
+                <aside>
+                    <a href="http://eu.battle.net/en/" target="_blank">Diablo3, WoW</a>
+                    <p></p>
+                    <a href="http://www.runescape.com" target="_blank">Runescape</a>
+                    <p></p>
+                    <a href="http://store.steampowered.com/" target="_blank">CS GO</a>
+                    <p></p>
+                    <a href="https://www.arduino.cc/" target="_blank">Arduino</a>
+                    <p></p>
+                    <a href="http://www.gyf.se/larskaggskolan/" target="_blank">Lars Kaggskolan</a>
+                </aside>
+
 
                 <article class="profilfoto">
                     <header>
                         <h4>Profilfoto</h4>
                     </header>
                     <!-- Bilder på mig, men den här kommentaren ser du inte. Inte om du inte letar efter mig! -->
-                    <p id="lol"></p>
+                    <p id="bild pa mig"></p>
                     <img src="/pics/IMG_0046.JPG" alt="Bild på mig">
                     <footer>
                         <p>
