--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -35,7 +35,7 @@
                     </header>
                     <ul>
                         <li>
-                            <p>Styrketräna</p>
+                            <p><strong>Styrketräna</strong></p>
                             <ul>
                                 <li>
                                     <p>Tycker mer om färre reps med tyngre vikter än fler reps med lättare.</p>
@@ -45,7 +45,7 @@
                     </ul>
                     <ul>
                         <li>
-                            <p>Gaming</p>
+                            <p><strong>Gaming</strong></p>
                             <ul>
                                 <li>
                                     <p>Diablo3</p>
@@ -88,7 +88,7 @@
                     </header>
                     <ol>
                         <li>
-                            <p>Vad jag är bra på</p>
+                            <p><strong>Vad jag är bra på</strong></p>
                         </li>
                         <li>
                             <p>Jag är bra på att fort bli bra på datorspel och att fort förstår hur man ska bli bättre än andra.</p>
@@ -152,17 +152,7 @@
                     </header>
                     <p>Att uppnå de mål jag satt framför mig och de mål jag kommer sätta.</p>
                 </article>
-                <aside>
-                    <a href="http://eu.battle.net/en/" target="_blank">Diablo3, WoW</a>
-                    <p></p>
-                    <a href="http://www.runescape.com" target="_blank">Runescape</a>
-                    <p></p>
-                    <a href="http://store.steampowered.com/" target="_blank">CS GO</a>
-                    <p></p>
-                    <a href="https://www.arduino.cc/" target="_blank">Arduino</a>
-                    <p></p>
-                    <a href="http://www.gyf.se/larskaggskolan/" target="_blank">Lars Kaggskolan</a>
-                </aside>
+
 
 
                 <article class="profilfoto">
@@ -170,7 +160,7 @@
                         <h4>Profilfoto</h4>
                     </header>
                     <!-- Bilder på mig, men den här kommentaren ser du inte. Inte om du inte letar efter mig! -->
-                    <p id="bild pa mig"></p>
+                    <p id="bild amig"></p>
                     <img src="/pics/IMG_0046.JPG" alt="Bild på mig">
                     <footer>
                         <p>
@@ -179,6 +169,17 @@
                     </footer>
                 </article>
             </article>
+            <aside>
+                <a href="http://eu.battle.net/en/" target="_blank">Diablo3, WoW</a>
+                <p></p>
+                <a href="http://www.runescape.com" target="_blank">Runescape</a>
+                <p></p>
+                <a href="http://store.steampowered.com/" target="_blank">CS GO</a>
+                <p></p>
+                <a href="https://www.arduino.cc/" target="_blank">Arduino</a>
+                <p></p>
+                <a href="http://www.gyf.se/larskaggskolan/" target="_blank">Lars Kaggskolan</a>
+            </aside>
         </main>
         <footer>
             <p>Den här sidan ägs av Erik Petersson</p>
